--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=
+    "description" content="venta de remeras, buzos y camperas estampadas , servicio de confeccion y  estampado para particulares y empresas "/>
+   <meta name="keywords" 
+   content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
+   ><meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
     <title>Dos Extremos </title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -84,7 +89,7 @@
             </a>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
-            <a class="nav-link active" aria-current="page" href="./remeras.html">
+            <a class="nav-link active" aria-current="page" href="./camperas.html">
               <div class="card" >
                
                 <img src="./image/camperagolden.png" class="card-img-top" alt="campera">
@@ -106,7 +111,7 @@
 
       <footer >   
     
-        <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas.</span>
+        <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
         <div class="footer">
          <h3>Seguinos en las Redes</h3>
          <img src="./image/facebook.png" alt="facebook">
@@ -115,6 +120,7 @@
   
   <div class=" footer-botton__copyright ">
            &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
+          </div> 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 </body>
