--- a/remeras.html
+++ b/remeras.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+    <meta name=
+    "description" content="venta de remeras, buzos y camperas estampadas , servicio de confeccion y  estampado para particulares y empresas "/>
+   <meta name="keywords" 
+   content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
+   >
+    <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
     <title>Dos Extremos </title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -15,7 +20,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> </a>
                 <a href="/" class="logo">
-                  <img src="../image/logo.png" alt="logo de la empresa"/>
+                  <img src="./image/logo.png" alt="logo de la empresa"/>
                 </a>      
                         <a class="nav__link" href="../index.html" ></a> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,102 +55,102 @@
       <div class="row gy-3 my-3" >
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card" >
-                  <img src="./image/remelove.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remelove.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Love and Death</h2>
                     <p>$4999 </p>
                     <p class="card-text">Talles disponibles: S-M-L-XL
                     </p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card" >
-                  <img src="./image/remevalhalla.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remevalhalla.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Viking Valhalla</h2>
                     <p>$4999</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
           <div class="card" >
-              <img src="./image/remenogods.png" class="card-img-top" alt="buzo">
+              <img src="./image/remenogods.png" class="card-img-top" alt="reme">
               <div class="card-body">
                 <h2 class="card-title">Reme No Gods </h2>
                 <p>  $4999                     </p>
                 <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                <a href="#" class="btn btn-primary">Comprar </a>
+                <a href="./compras.html" class="btn btn-primary">Comprar </a>
               </div>
             </div>
       </div>
       <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/canguronomecalmo.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remelovecraft.png" class="card-img-top" alt="reme">
                 
                   <div class="card-body">
-                    <h2 class="card-title">Buzo Canguro No Me Calmo</h2>
+                    <h2 class="card-title">Reme Lovecraft</h2>
                     <p>$7999</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/skull.png" class="card-img-top" alt="buzo">
+                  <img src="./image/faro.png" class="card-img-top" alt="reme">
                   <div class="card-body">
-                    <h5 class="card-title">Buzo Skull</h5>
+                    <h2 class="card-title">Reme Dices</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/lovecraft.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remecraneo.png" class="card-img-top" alt="reme">
                   <div class="card-body">
-                    <h2 class="card-title">Buzo Lovecraft</h2>
+                    <h2 class="card-title">Reme Craneos</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./index.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/buzocraneo.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remeaniman.png" class="card-img-top" alt="reme">
                   <div class="card-body">
-                    <h2 class="card-title">Buzo Craneo</h2>
+                    <h2 class="card-title">Reme Animan</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/valhalla.png" class="card-img-top" alt="buzo">
+                  <img src="./image/nomecalmo.png" class="card-img-top" alt="Reme">
                   <div class="card-body">
-                    <h2 class="card-title">Buzo Valhalla</h2>
+                    <h2 class="card-title">Reme No me Calmo</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/burn.png" class="card-img-top" alt="buzo">
+                  <img src="./image/remedeath.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Buzo Burn</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
@@ -157,7 +162,7 @@
   </div>
     
     <footer >   
-      <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas.</span>
+      <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
         <div class="footer">
          <h3>Seguinos en las Redes</h3>
          <img src="./image/facebook.png" alt="">
@@ -166,6 +171,7 @@
   
   <div class=" footer-botton__copyright ">
            &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
+          </div> 
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 
 </body>
