--- a/buzos.html
+++ b/buzos.html
@@ -22,7 +22,7 @@
                 <a href="/" class="logo">
                   <img src="./image/logo.png" alt="logo de la empresa"/>
                 </a>      
-                        <a class="nav__link" href="../index.html" ></a> 
+                        <a class="nav__link" href="./index.html" ></a> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
