--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container-fluid">
              
                 <a class="navbar-brand" href=""> </a>
-                <img src="../image/logo.png" alt="">
+                <img src="./image/logo.png" alt="">
               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
