--- a/remeras.html
+++ b/remeras.html
@@ -117,7 +117,7 @@
                     <h2 class="card-title">Reme Craneos</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="./index.html" class="btn btn-primary">Comprar</a>
+                    <a href="index.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
