--- a/camperas.html
+++ b/camperas.html
@@ -24,7 +24,7 @@
                     <a href="/" class="logo">
                       <img src="image/logo.png" alt="logo de la empresa"/>
                     </a>      
-                            <a class="nav__link" href="./index.html" ></a> 
+                            <a class="nav__link" href="index.html" ></a> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -160,8 +160,10 @@
           <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas , 10% de descuento pagando en efectivo.</span>
             <div class="footer">
              <h3>Seguinos en las Redes</h3>
-             <img src="./image/facebook.png" alt="instagram">
+             <img src="./image/facebook.png" alt="facebook">
+             <img src="./image/instagram.png" alt="instagram">
              <img src="./image/twitter.png" alt="twitter">  
+
       <div class=" footer-botton__copyright ">
                &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
               </div> 
