--- a/compras.html
+++ b/compras.html
@@ -24,7 +24,7 @@
                     <a href="/" class="logo">
                       <img src="image/logo.png" alt="logo de la empresa"/>
                     </a>      
-                            <a class="nav__link" href="./index.html" ></a> 
+                            <a class="nav__link" href="index.html" ></a> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -132,21 +132,17 @@
 </div>   
     </div>   
      <footer>
-      <div class="footer">
-        <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
-        <div class="footer">
-         <h4>Seguinos en las Redes</h4>
-         <img src="./image/facebook.png" alt="faceboock">
-         <img src="./image/instagram.png" alt="instagram">
-         <img src="./image/twitter.png" alt="twitter">
-
-        </div>  
-      </div>  
-     </footer>         
-  <div class=" footer-botton__copyright ">
-           &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
-          </div> 
+     
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
               </body>
       
-</html>
+</html><span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
+<div class="footer">
+ <h3>Seguinos en las Redes</h3>
+ <img src="./image/facebook.png" alt="facebook">
+ <img src="./image/instagram.png" alt="instagram">
+ <img src="./image/twitter.png" alt="twitter">
+
+<div class=" footer-botton__copyright ">
+   &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
+  </div> 
