--- a/compras.html
+++ b/compras.html
@@ -9,7 +9,7 @@
    <meta name="keywords" 
    content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
    >
-        <link rel="shortcut icon" href="image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+        <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
         <title>Dos Extremos </title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Roboto+Condensed&display=swap" rel="stylesheet">
 
@@ -22,9 +22,9 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"> </a>
                     <a href="/" class="logo">
-                      <img src="image/logo.png" alt="logo de la empresa"/>
+                      <img src="./image/logo.png" alt="logo de la empresa"/>
                     </a>      
-                            <a class="nav__link" href="index.html" ></a> 
+                            <a class="nav__link" href="./index.html" ></a> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -49,7 +49,6 @@
                           </li>       
                         </div>
                     </ul>
-                   
                 </div>
               </div>    
             </nav>
