--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="keywords" 
    content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
    ><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+    <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
     <title>Dos Extremos </title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">     
             <div class="container-fluid">     
                 <a class="navbar-brand" href=""> </a>
-                <img src="image/logo.png" alt="logo"> 
+                <img src="./image/logo.png" alt="logo"> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
