--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,7 @@
        <meta name="keywords" 
        content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
        >
-        <link rel="shortcut icon" href="image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+        <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
         <title>Dos Extremos </title>
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -20,9 +20,9 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"> </a>
                     <a href="/" class="logo">
-                      <img src="image/logo.png" alt="logo de la empresa"/>
+                      <img src="./image/logo.png" alt="logo de la empresa"/>
                     </a>      
-                            <a class="nav__link" href="index.html" ></a> 
+                            <a class="nav__link" href="./index.html" ></a> 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
