--- a/camperas.html
+++ b/camperas.html
@@ -20,11 +20,9 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"> </a>
-                    <a href="/" class="logo">
-                      <img src="./image/logo.png" alt="logo de la empresa"/>
-                    </a>      
-                            <a class="nav__link" href="./index.html" ></a> 
+                  <a class="navbar-brand" href="./index.html">
+                    <img src="./image/logo.png" alt="logo de la empresa"/>
+                  </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
