--- a/pages/compras.html
+++ b/pages/compras.html
@@ -9,19 +9,17 @@
    <meta name="keywords" 
    content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
    >
-        <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+        <link rel="shortcut icon" href="../image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
         <title>Dos Extremos </title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Roboto+Condensed&display=swap" rel="stylesheet">
-
-        <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="./index.html">
-                    <img src="./image/logo.png" alt="logo de la empresa"/>
+                  <a class="navbar-brand" href="../index.html">
+                    <img src="../image/logo.png" alt="logo de la empresa"/>
                   </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -29,19 +27,19 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./remeras.html">Remeras</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/remeras.html">Remeras</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./buzos.html">Buzos</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/buzos.html">Buzos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./camperas.html">Camperas</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/camperas.html">Camperas</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./ayuda.html">Ayuda</a>
+                            <a class="nav-link active" aria-current="page" href="../pages/ayuda.html">Ayuda</a>
                           </li>                                      
                             </ul>
                           </li>       
@@ -106,7 +104,7 @@
       </div>
       <div class="col-sm-6 col-md-4 col lg-3">
           <div class="card" >     
-            <img src="./image/pagos.png" class="card-img-top" alt="buzo">
+            <img src="../image/pagos.png" class="card-img-top" alt="buzo">
             <div class="card-body">
          <h2> Bonificacion especial</h2>
          <p class="card-text">Dos Extremos Clothings te ofrece 10 % de descuento por pago enefectivo o transferencia bancaria.
@@ -118,7 +116,7 @@
       <div class="col-sm-6 col-md-4 col lg-3">
         <a class="nav-link active" aria-current="page" href="./camperas.html">
           <div class="card" >         
-            <img src="./image/camperagolden.png" class="card-img-top" alt="campera">
+            <img src="../image/camperagolden.png" class="card-img-top" alt="campera">
             <div class="card-body">
               <h3 class="card-title">
               Oferta de la semana!!, Campera Golden $8300</h3>       
@@ -129,16 +127,16 @@
 </div>   
     </div>   
      <footer>
-     
+           <link rel="stylesheet" href="../css/style.css">
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
               </body>
       
 </html><span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
 <div class="footer">
  <h3>Seguinos en las Redes</h3>
- <img src="./image/facebook.png" alt="facebook">
- <img src="./image/instagram.png" alt="instagram">
- <img src="./image/twitter.png" alt="twitter">
+ <img src="../image/facebook.png" alt="facebook">
+ <img src="../image/instagram.png" alt="instagram">
+ <img src="../image/twitter.png" alt="twitter">
 
 <div class=" footer-botton__copyright ">
    &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
