--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
     <title>Dos Extremos </title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
@@ -27,19 +26,19 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./remeras.html">Remeras</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/remeras.html">Remeras</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./buzos.html">Buzos</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/buzos.html">Buzos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./camperas.html">Camperas</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/camperas.html">Camperas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./ayuda.html">Ayuda</a>
+                        <a class="nav-link active" aria-current="page" href="./pages/ayuda.html">Ayuda</a>
                       </li>                                      
                         </ul>
                       </li>       
@@ -53,7 +52,7 @@
     <div class="container">
       <div class="row gy-3 my-3" >
           <div class="col-sm-6 col-md-4 col lg-3">
-            <a class="nav-link active" aria-current="page" href="./remeras.html">
+            <a class="nav-link active" aria-current="page" href="./pages/remeras.html">
               <div class="card" >  
                 <img src="./image/nomecalmo.png" class="card-img-top" alt="remera">
                 <div class="card-body">   
@@ -64,7 +63,7 @@
             </a>       
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
-            <a class="nav-link active" aria-current="page" href="./buzos.html">
+            <a class="nav-link active" aria-current="page" href="./pages/buzos.html">
               <div class="card" >
                
                 <img src="./image/buzocangurofrente.png" class="card-img-top" alt="buzo">
@@ -77,7 +76,7 @@
             </a>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
-            <a class="nav-link active" aria-current="page" href="./camperas.html">
+            <a class="nav-link active" aria-current="page" href="./pages/camperas.html">
               <div class="card" >    
                 <img src="./image/camperagolden.png" class="card-img-top" alt="campera">
                 <div class="card-body">    
@@ -102,7 +101,7 @@
   <div class=" footer-botton__copyright ">
            &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
           </div> 
-
+          <link rel="stylesheet" href="css/style.css">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 </body>
 
