--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -9,17 +9,16 @@
    <meta name="keywords" 
    content="dos extremos clotings, dos extremos, remeras , buzos y camperas estampados , venta de remeras, buzos y camperas, servicio de confeccion y de estampado en remeras, buzos y camperas, venta de remeras , buzos y camperas en quilmes. "
    >
-    <link rel="shortcut icon" href="./image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
+    <link rel="shortcut icon" href="../image/logo.png " type="image/x-icon" width="250px" height="260 px"> 
     <title>Dos Extremos </title>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html">
-                <img src="./image/logo.png" alt="logo de la empresa"/>
+              <a class="navbar-brand" href="../index.html">
+                <img src="../image/logo.png" alt="logo de la empresa"/>
               </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,16 +26,16 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./buzos.html">Buzos</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/buzos.html">Buzos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./camperas.html">Camperas</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/camperas.html">Camperas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./nosotros.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/nosotros.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./ayuda.html">Ayuda</a>
+                        <a class="nav-link active" aria-current="page" href="../pages/ayuda.html">Ayuda</a>
                       </li>                                      
                         </ul>
                       </li>       
@@ -53,102 +52,102 @@
       <div class="row gy-3 my-3" >
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card" >
-                  <img src="./image/remelove.png" class="card-img-top" alt="reme">
+                  <img src="../image/remelove.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Love and Death</h2>
                     <p>$4999 </p>
                     <p class="card-text">Talles disponibles: S-M-L-XL
                     </p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card" >
-                  <img src="./image/remevalhalla.png" class="card-img-top" alt="reme">
+                  <img src="../image/remevalhalla.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Viking Valhalla</h2>
                     <p>$4999</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
           <div class="card" >
-              <img src="./image/remenogods.png" class="card-img-top" alt="reme">
+              <img src="../image/remenogods.png" class="card-img-top" alt="reme">
               <div class="card-body">
                 <h2 class="card-title">Reme No Gods </h2>
                 <p>  $4999                     </p>
                 <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                <a href="./compras.html" class="btn btn-primary">Comprar </a>
+                <a href="../pages/compras.html" class="btn btn-primary">Comprar </a>
               </div>
             </div>
       </div>
       <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/remelovecraft.png" class="card-img-top" alt="reme">
+                  <img src="../image/remelovecraft.png" class="card-img-top" alt="reme">
                 
                   <div class="card-body">
                     <h2 class="card-title">Reme Lovecraft</h2>
                     <p>$7999</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/faro.png" class="card-img-top" alt="reme">
+                  <img src="../image/faro.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Dices</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL </p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/remecraneo.png" class="card-img-top" alt="reme">
+                  <img src="../image/remecraneo.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Craneos</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="index.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/remeaniman.png" class="card-img-top" alt="reme">
+                  <img src="../image/remeaniman.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme Animan</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/nomecalmo.png" class="card-img-top" alt="Reme">
+                  <img src="../image/nomecalmo.png" class="card-img-top" alt="Reme">
                   <div class="card-body">
                     <h2 class="card-title">Reme No me Calmo</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
           <div class="col-sm-6 col-md-4 col lg-3">
               <div class="card">
-                  <img src="./image/remedeath.png" class="card-img-top" alt="reme">
+                  <img src="../image/remedeath.png" class="card-img-top" alt="reme">
                   <div class="card-body">
                     <h2 class="card-title">Buzo Burn</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
-                    <a href="./compras.html" class="btn btn-primary">Comprar</a>
+                    <a href="../pages/compras.html" class="btn btn-primary">Comprar</a>
                   </div>
                 </div>
           </div>
@@ -158,13 +157,14 @@
       <span class="d-block p-2 text-bg-dark">Hasta 6 cuotas sin interes con todas las tarjetas de Credito , envios gratis por mas de 3 prendas, 10% de descuento pagando en efectivo.</span>
         <div class="footer">
          <h3>Seguinos en las Redes</h3>
-         <img src="./image/facebook.png" alt="">
-         <img src="./image/instagram.png" alt="">
-         <img src="./image/twitter.png" alt="">
+         <img src="../image/facebook.png" alt="">
+         <img src="../image/instagram.png" alt="">
+         <img src="../image/twitter.png" alt="">
   
   <div class=" footer-botton__copyright ">
            &copy;Copyright 2023, Dos Extremos Clothings <a href=""> </a>
           </div> 
+          <link rel="stylesheet" href="../css/style.css">
            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 
 </body>
