--- a/buzos.html
+++ b/buzos.html
@@ -48,6 +48,7 @@
               </div>        
             </nav>    
         </header>
+        <h1 class="titulo">Buzos Dos Extremos Clothings</h1>
         <div class="container">
             <div class="row gy-3 my-3" >
                 <div class="col-sm-6 col-md-4 col lg-3">
