--- a/camperas.html
+++ b/camperas.html
@@ -50,7 +50,7 @@
               </div>      
             </nav> 
         </header>
-        <h1 class="titulo">Dos Extremos Clothings</h1>
+        <h1 class="titulo">Camperas Dos Extremos Clothings</h1>
         <div class="container">
           <div class="row gy-3 my-3" >
               <div class="col-sm-6 col-md-4 col lg-3">
