--- a/remeras.html
+++ b/remeras.html
@@ -148,7 +148,7 @@
               <div class="card">
                   <img src="./image/remedeath.png" class="card-img-top" alt="reme">
                   <div class="card-body">
-                    <h2 class="card-title">Buzo Burn</h2>
+                    <h2 class="card-title">Reme Burn</h2>
                     <p>$6000</p>
                     <p class="card-text">Talles disponibles: S-M-L-XL</p>
                     <a href="./compras.html" class="btn btn-primary">Comprar</a>
